; ModuleID = '/home/carl/AnghaBench/lede/package/libs/libnl-tiny/src/extr_socket.c___alloc_socket.c'
source_filename = "/home/carl/AnghaBench/lede/package/libs/libnl-tiny/src/extr_socket.c___alloc_socket.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nl_sock = type { i32, %struct.TYPE_4__, i32, i32, %struct.TYPE_3__, %struct.nl_cb* }
%struct.TYPE_4__ = type { i64, i8* }
%struct.TYPE_3__ = type { i8* }
%struct.nl_cb = type { i32 }

@AF_NETLINK = common dso_local global i8* null, align 8
@UINT_MAX = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.nl_sock* (%struct.nl_cb*)* @__alloc_socket to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.nl_sock* @__alloc_socket(%struct.nl_cb* %0) #0 {
  %2 = alloca %struct.nl_sock*, align 8
  %3 = alloca %struct.nl_cb*, align 8
  %4 = alloca %struct.nl_sock*, align 8
  store %struct.nl_cb* %0, %struct.nl_cb** %3, align 8
  %5 = call %struct.nl_sock* @calloc(i32 1, i32 48)
  store %struct.nl_sock* %5, %struct.nl_sock** %4, align 8
  %6 = load %struct.nl_sock*, %struct.nl_sock** %4, align 8
  %7 = icmp ne %struct.nl_sock* %6, null
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  store %struct.nl_sock* null, %struct.nl_sock** %2, align 8
  br label %43

9:                                                ; preds = %1
  %10 = load %struct.nl_sock*, %struct.nl_sock** %4, align 8
  %11 = getelementptr inbounds %struct.nl_sock, %struct.nl_sock* %10, i32 0, i32 0
  store i32 -1, i32* %11, align 8
  %12 = load %struct.nl_cb*, %struct.nl_cb** %3, align 8
  %13 = load %struct.nl_sock*, %struct.nl_sock** %4, align 8
  %14 = getelementptr inbounds %struct.nl_sock, %struct.nl_sock* %13, i32 0, i32 5
  store %struct.nl_cb* %12, %struct.nl_cb** %14, align 8
  %15 = load i8*, i8** @AF_NETLINK, align 8
  %16 = load %struct.nl_sock*, %struct.nl_sock** %4, align 8
  %17 = getelementptr inbounds %struct.nl_sock, %struct.nl_sock* %16, i32 0, i32 1
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 1
  store i8* %15, i8** %18, align 8
  %19 = load i8*, i8** @AF_NETLINK, align 8
  %20 = load %struct.nl_sock*, %struct.nl_sock** %4, align 8
  %21 = getelementptr inbounds %struct.nl_sock, %struct.nl_sock* %20, i32 0, i32 4
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 0
  store i8* %19, i8** %22, align 8
  %23 = call i32 @time(i32 0)
  %24 = load %struct.nl_sock*, %struct.nl_sock** %4, align 8
  %25 = getelementptr inbounds %struct.nl_sock, %struct.nl_sock* %24, i32 0, i32 2
  store i32 %23, i32* %25, align 8
  %26 = load %struct.nl_sock*, %struct.nl_sock** %4, align 8
  %27 = getelementptr inbounds %struct.nl_sock, %struct.nl_sock* %26, i32 0, i32 3
  store i32 %23, i32* %27, align 4
  %28 = call i64 (...) @generate_local_port()
  %29 = load %struct.nl_sock*, %struct.nl_sock** %4, align 8
  %30 = getelementptr inbounds %struct.nl_sock, %struct.nl_sock* %29, i32 0, i32 1
  %31 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %30, i32 0, i32 0
  store i64 %28, i64* %31, align 8
  %32 = load %struct.nl_sock*, %struct.nl_sock** %4, align 8
  %33 = getelementptr inbounds %struct.nl_sock, %struct.nl_sock* %32, i32 0, i32 1
  %34 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %33, i32 0, i32 0
  %35 = load i64, i64* %34, align 8
  %36 = load i64, i64* @UINT_MAX, align 8
  %37 = icmp eq i64 %35, %36
  br i1 %37, label %38, label %41

38:                                               ; preds = %9
  %39 = load %struct.nl_sock*, %struct.nl_sock** %4, align 8
  %40 = call i32 @nl_socket_free(%struct.nl_sock* %39)
  store %struct.nl_sock* null, %struct.nl_sock** %2, align 8
  br label %43

41:                                               ; preds = %9
  %42 = load %struct.nl_sock*, %struct.nl_sock** %4, align 8
  store %struct.nl_sock* %42, %struct.nl_sock** %2, align 8
  br label %43

43:                                               ; preds = %41, %38, %8
  %44 = load %struct.nl_sock*, %struct.nl_sock** %2, align 8
  ret %struct.nl_sock* %44
}

declare dso_local %struct.nl_sock* @calloc(i32, i32) #1

declare dso_local i32 @time(i32) #1

declare dso_local i64 @generate_local_port(...) #1

declare dso_local i32 @nl_socket_free(%struct.nl_sock*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
